# echoic

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  PLAN.md  README.md  README_CN.md  README_DE.md  README_FR.md  README_JA.md  README_KO.md  README_TW.md  docker-compose.yml  entrypoint.sh
backend/: .env.example  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 169a9b672092_create_initial_tables.py  578f7075c285_add_oral_attempts.py  5cce4f7e6bb7_add_language_to_audio_files.py  a3f1b2c4d5e6_add_collections.py
backend/app/: config.py  db.py  main.py
backend/app/api/routes/: audio.py  collections.py  gallery.py  oral.py  practice.py  stats.py
backend/app/models/: __init__.py  audio_file.py  collection.py  oral_attempt.py  practice_record.py
backend/app/schemas/: audio.py  collection.py  oral.py  practice.py
backend/app/services/: factory.py
backend/app/services/alignment/: base.py  wav2vec2.py
backend/app/services/asr/: base.py  whisperx.py
backend/app/services/gallery/: base.py  bbc.py  voa.py
backend/app/services/llm/: base.py  ollama.py  openai.py
backend/app/services/scoring/: backends.py  base.py  phoneme.py
backend/app/services/storage/: base.py  local.py
backend/tests/: conftest.py
backend/tests/api/: test_audio.py  test_practice.py  test_stats.py
backend/tests/db/: test_models.py
backend/tests/services/alignment/: test_alignment_unit.py  test_wav2vec2.py
backend/tests/services/asr/: test_whisperx.py  test_whisperx_unit.py
backend/tests/services/scoring/: test_completeness.py  test_fluency_unit.py  test_phoneme_unit.py
backend/tests/services/storage/: test_local.py
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
frontend/src/api/: index.js
frontend/src/hooks/: useOralPractice.js  usePracticeRecorder.js
frontend/src/i18n/: index.js
frontend/src/lib/: audioSegment.js  settings.jsx
frontend/src/pages/: AudioLibrary.jsx  Gallery.jsx  Home.jsx  OralHome.jsx  OralPractice.jsx  Overview.jsx  Practice.jsx  (+1 more)
(+19 files in other folders)
